--- a/ui/root.ui
+++ b/ui/root.ui
@@ -12,20 +12,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>820</width>
+    <width>1024</width>
     <height>615</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>820</width>
+    <width>1024</width>
     <height>615</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>880</width>
-    <height>700</height>
+    <width>1024</width>
+    <height>615</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,7 @@
    <widget class="QLabel" name="label_Watchlist">
     <property name="geometry">
      <rect>
-      <x>17</x>
+      <x>15</x>
       <y>321</y>
       <width>90</width>
       <height>21</height>
@@ -82,9 +82,21 @@
      <rect>
       <x>190</x>
       <y>70</y>
-      <width>621</width>
+      <width>820</width>
       <height>481</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>820</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>820</width>
+      <height>481</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -119,6 +131,12 @@
     <property name="horizontalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="autoScroll">
+     <bool>false</bool>
+    </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
@@ -141,17 +159,17 @@
      <bool>true</bool>
     </attribute>
     <attribute name="horizontalHeaderMinimumSectionSize">
-     <number>155</number>
+     <number>0</number>
     </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>155</number>
+     <number>205</number>
     </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
     <column>
      <property name="text">
-      <string>Stock</string>
+      <string>-</string>
      </property>
      <property name="font">
       <font>
@@ -164,7 +182,7 @@
     </column>
     <column>
      <property name="text">
-      <string>Condition</string>
+      <string>-</string>
      </property>
      <property name="font">
       <font>
@@ -177,7 +195,7 @@
     </column>
     <column>
      <property name="text">
-      <string>Price</string>
+      <string>-</string>
      </property>
      <property name="font">
       <font>
@@ -190,7 +208,20 @@
     </column>
     <column>
      <property name="text">
-      <string>Ratio</string>
+      <string>-</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Roboto</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>-</string>
      </property>
      <property name="font">
       <font>
@@ -205,7 +236,7 @@
    <widget class="QPushButton" name="button_alertsAdd">
     <property name="geometry">
      <rect>
-      <x>117</x>
+      <x>115</x>
       <y>321</y>
       <width>24</width>
       <height>24</height>
@@ -226,7 +257,7 @@ border-color: rgb(255, 63, 15);
    <widget class="QPushButton" name="button_alertsDelete">
     <property name="geometry">
      <rect>
-      <x>147</x>
+      <x>145</x>
       <y>321</y>
       <width>24</width>
       <height>24</height>
@@ -246,7 +277,7 @@ border-color: rgb(255, 63, 15);
    <widget class="QLineEdit" name="lineEdit_objectSearch">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>550</x>
       <y>39</y>
       <width>100</width>
       <height>18</height>
@@ -389,7 +420,7 @@ color: rgb(234, 230, 228);</string>
    <widget class="QToolButton" name="toolButton_objectSearchBox">
     <property name="geometry">
      <rect>
-      <x>430</x>
+      <x>540</x>
       <y>5</y>
       <width>120</width>
       <height>55</height>
@@ -430,7 +461,7 @@ color: rgb(234, 230, 228);</string>
    <widget class="QToolButton" name="toolButton_objectSort">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>770</x>
       <y>10</y>
       <width>71</width>
       <height>50</height>
@@ -471,7 +502,7 @@ color: rgb(234, 230, 228);</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>850</x>
       <y>10</y>
       <width>71</width>
       <height>50</height>
@@ -509,7 +540,7 @@ color: rgb(234, 230, 228);</string>
    <widget class="QToolButton" name="toolButton_objectSettings">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>930</x>
       <y>10</y>
       <width>71</width>
       <height>50</height>
@@ -564,7 +595,11 @@ color: rgb(234, 230, 228);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(234, 230, 228);</string>
+     <string notr="true">color: rgb(234, 230, 228);
+background-color: rgb(75, 75, 75);</string>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::EditKeyPressed</set>
     </property>
     <property name="dragEnabled">
      <bool>true</bool>
@@ -576,7 +611,7 @@ color: rgb(234, 230, 228);</string>
      <enum>QAbstractItemView::InternalMove</enum>
     </property>
     <property name="selectionMode">
-     <enum>QAbstractItemView::MultiSelection</enum>
+     <enum>QAbstractItemView::ExtendedSelection</enum>
     </property>
     <property name="spacing">
      <number>5</number>
@@ -585,10 +620,10 @@ color: rgb(234, 230, 228);</string>
      <set>Qt::AlignJustify|Qt::AlignLeading|Qt::AlignLeft</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="button_alertlistAdd">
+   <widget class="QPushButton" name="button_watchAdd">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>118</x>
       <y>70</y>
       <width>24</width>
       <height>24</height>
@@ -609,7 +644,7 @@ border-color: rgb(255, 63, 15);
    <widget class="QLabel" name="label_Alertlist">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>18</x>
       <y>70</y>
       <width>90</width>
       <height>21</height>
@@ -639,13 +674,13 @@ border-color: rgb(255, 63, 15);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QListWidget" name="listWidget_watchlists_2">
+   <widget class="QListWidget" name="listWidget_watchlists">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>13</x>
+      <x>10</x>
       <y>100</y>
       <width>161</width>
       <height>200</height>
@@ -659,7 +694,8 @@ border-color: rgb(255, 63, 15);
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(234, 230, 228);</string>
+     <string notr="true">color: rgb(234, 230, 228);
+background-color: rgb(75, 75, 75);</string>
     </property>
     <property name="dragEnabled">
      <bool>true</bool>
@@ -671,19 +707,22 @@ border-color: rgb(255, 63, 15);
      <enum>QAbstractItemView::InternalMove</enum>
     </property>
     <property name="selectionMode">
-     <enum>QAbstractItemView::MultiSelection</enum>
+     <enum>QAbstractItemView::ExtendedSelection</enum>
     </property>
     <property name="spacing">
      <number>5</number>
+    </property>
+    <property name="selectionRectVisible">
+     <bool>false</bool>
     </property>
     <property name="itemAlignment">
      <set>Qt::AlignJustify|Qt::AlignLeading|Qt::AlignLeft</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="button_alertlistDelete">
+   <widget class="QPushButton" name="button_watchDelete">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>148</x>
       <y>70</y>
       <width>24</width>
       <height>24</height>
@@ -713,17 +752,17 @@ border-color: rgb(255, 63, 15);
    <zorder>toolButton_objectFilter</zorder>
    <zorder>toolButton_objectSettings</zorder>
    <zorder>listWidget_alertlists</zorder>
-   <zorder>button_alertlistAdd</zorder>
+   <zorder>button_watchAdd</zorder>
    <zorder>label_Alertlist</zorder>
-   <zorder>listWidget_watchlists_2</zorder>
-   <zorder>button_alertlistDelete</zorder>
+   <zorder>listWidget_watchlists</zorder>
+   <zorder>button_watchDelete</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>820</width>
+     <width>1024</width>
      <height>22</height>
     </rect>
    </property>
